--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nuxt": "3.0.0-rc.9"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.0",
+    "@heroicons/vue": "^2.0.10",
     "@pinia/nuxt": "^0.4.1",
     "@vuepic/vue-datepicker": "^3.4.7"
   }
